All font size and page spacing issue resolved

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8712,7 +8712,7 @@ body {
 }
 
 .h2,h2 {
-  font-size: 58px;
+  font-size: 40px;
   line-height: 1.29em;
   letter-spacing: -1px;
 }
@@ -8737,6 +8737,7 @@ body {
 
 p {
   line-height: 1.87em;
+  font-size: 18px;
 }
 
 ::-moz-placeholder {
